# pitchvis

./: .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  Cargo.toml  README-BUILD-CHECK.md  README.md  VQT_REVIEW.md  check-desktop.sh  claude.md  index.html  index.js  package.json
.cargo/: config.toml
archive/pitchvis_wasm_kiss3d/: index.html  package-lock.json  webpack.config.js
archive/pitchvis_wasm_kiss3d/src/: cqt.rs  lib.rs
dagc/src/: lib.rs
dagc_fork/src/: lib.rs
docs/: ADAPTIVE_SMOOTHING_AND_BASS_DETECTION.md  ATTACK_AND_PERCUSSION_DETECTION.md  CALMNESS_ANALYSIS_AND_IMPROVEMENTS.md  CHOIR_SINGER_FEATURES.md  ML_PITCH_DETECTION_INVESTIGATION.md  PEAK_DETECTION_ANALYSIS.md  PEAK_DETECTION_CRATE_EVALUATION.md  RESAMPLING_OPTIMIZATION.md  SIGNAL_PROCESSING.md  TUNING_ACCURACY_VISUALIZATION.md  VIBRATO_ANALYSIS.md  VIBRATO_SHADER_ANIMATION.md  VIBRATO_VISUALIZATION.md  VQT_IMPLEMENTATION_ANALYSIS.md
fastlane/metadata/android/en-US/: full_description.txt
fastlane/metadata/android/en-US/changelogs/: 28.txt  29.txt
na-mainloop/: Cargo.toml  settings.gradle
na-mainloop/src/: lib.rs
pitchvis_analysis/: Cargo.toml
pitchvis_analysis/examples/: test_chord_detection.rs
pitchvis_analysis/src/: analysis.rs  chord.rs  chord_detector_wrapper.rs  chord_enhanced.rs  color_mapping.rs  cqt.rs  lib.rs  util.rs  vqt.rs
pitchvis_analysis/src/analysis_modules/: afterglow.rs  attack_detection.rs  calmness.rs  glissando.rs  mod.rs  peak_detection.rs  pitch_analysis.rs  vibrato.rs
pitchvis_android/: Cargo.toml  README.md  build.rs  build_debug.sh  build_release.sh
pitchvis_android/app/: build.gradle
pitchvis_android/app/src/main/: AndroidManifest.xml
pitchvis_android/assets/shaders/: noisy_color_2d.wgsl
pitchvis_android/src/: analysis_system.rs  cqt_system.rs  display_system.rs  lib.rs
pitchvis_android/src/display_system/: material.rs
pitchvis_android_serial/: Cargo.toml  README.md  build.sh  build_release.sh  settings.gradle
pitchvis_android_serial/app/: build.gradle
pitchvis_android_serial/app/src/main/: AndroidManifest.xml
pitchvis_android_serial/app/src/main/java/co/realfit/agdkcpal/: MainActivity.java  SerialPortManager.java
pitchvis_android_serial/app/src/main/java/org/p1graph/pitchvis_serial/: MainActivity.java  SerialPortManager.java
pitchvis_android_serial/gradle/wrapper/: gradle-wrapper.properties
pitchvis_android_serial/src/: lib.rs
pitchvis_audio/: Cargo.toml
pitchvis_audio/src/: audio.rs  audio_desktop.rs  audio_wasm.rs  lib.rs
pitchvis_audio/src/audio/: audio_desktop.rs  audio_wasm.rs  mod.rs
pitchvis_colors/: Cargo.toml
pitchvis_colors/src/: lib.rs
pitchvis_serial/: Cargo.toml  README.md
pitchvis_serial/src/: audio_system.rs  main.rs  serial_system.rs
pitchvis_train/: Cargo.toml  train.py
pitchvis_train/src/: main.rs  train.rs
pitchvis_viewer/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  build_android_debug.sh  build_android_release.sh  build_wasm.sh  cargo_r_ml.sh  index.html  index.js  package-lock.json  run_desktop.sh  webpack.config.js
pitchvis_viewer/android/: build.gradle
pitchvis_viewer/android/app/: build.gradle
pitchvis_viewer/android/app/src/main/: AndroidManifest.xml
pitchvis_viewer/android/app/src/main/assets/shaders/: noisy_color_2d.wgsl  noisy_color_rings_2d.wgsl
pitchvis_viewer/android/app/src/main/java/org/p1graph/pitchvis/: MainActivity.java
pitchvis_viewer/android/app/src/main/res/values/: themes.xml
pitchvis_viewer/android/app/src/main/res/values-v29/: themes.xml
pitchvis_viewer/android/fastlane/metadata/android/en-US/: short_description.txt
pitchvis_viewer/android/fastlane/metadata/android/en-US/changelogs/: 27.txt
pitchvis_viewer/android/gradle/: libs.versions.toml
pitchvis_viewer/app/: build.gradle
pitchvis_viewer/app/src/main/: AndroidManifest.xml
pitchvis_viewer/assets/shaders/: noisy_color_2d.wgsl  noisy_color_rings_2d.wgsl  spectrogram_scroll.wgsl
pitchvis_viewer/src/: analysis_system.rs  app.rs  audio_system.rs  cqt_system.rs  display_system.rs  lib.rs  main.rs  ml_system.rs  util.rs  vqt_system.rs
pitchvis_viewer/src/app/: android_app.rs  common.rs  desktop_app.rs  mod.rs  wasm_app.rs
pitchvis_viewer/src/display_system/: material.rs  mod.rs  setup.rs  update.rs  util.rs
pitchvis_viewer/wasm/: index.html  package-lock.json  package.json  webpack.config.js
pitchvis_viewer/wasm/static_js/assets/shaders/: noisy_color_2d.wgsl  noisy_color_rings_2d.wgsl
pitchvis_wasm_kiss3d/: Cargo.toml  package-lock.json
pitchvis_wasm_kiss3d/src/: display.rs  lib.rs
rustysynth/src/: synthesizer.rs
rustysynth_fork/src/: midifile_sequencer.rs  voice.rs
scripts/: fdroid-buildserver-build.sh  fdroid-release-build.sh
src/: analysis.rs  analysis_system.rs  audio.rs  cqt.rs  cqt_system.rs  display.rs  display_system.rs  lib.rs  main.rs  util.rs
tonegen/: index.html
xtask/src/: main.rs
