[workspace]

members = [
    "pitchvis_analysis",
    "pitchvis_audio",
    "pitchvis_serial",
    "pitchvis_train",
    "pitchvis_viewer",
    "dagc_fork",
    "rustysynth_fork",
    "pitchvis_wasm_kiss3d",
]

resolver = "2"

exclude = ["na-mainloop"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release.package.pitchvis_serial]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
#panic = "abort"  # Abort on panic.

[profile.release.package.pitchvis-wasm-kiss3d]
strip = true

[patch.crates-io]
kiss3d = { git = "https://github.com/heinzelotto/kiss3d" }

[profile.release]
lto = true  # Enable link-time optimization.
