[workspace]

members = [
    "pitchvis_analysis",
    "pitchvis_audio",
    "pitchvis_colors",
    "pitchvis_serial",
    "pitchvis_train",
    "pitchvis_viewer",
    "dagc_fork",
    "rustysynth_fork",
    "pitchvis_wasm_kiss3d",
    "pitchvis_colors",
]

resolver = "2"

exclude = ["na-mainloop"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# bug in the winit version used in bevy 0.14, see https://github.com/bevyengine/bevy/issues/14291
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
strip = true
#codegen-units = 1
# lto = true
lto = "thin"     # TODO: could gain additional perfomance by changing to true, even if it's horribly slow
opt-level = 2
panic = "unwind"

# Needs https://github.com/rustwasm/wasm-pack/pull/1428,
# currently only available by building wasm-pack from master,
# e. g. `cargo install --git https://github.com/rustwasm/wasm-pack`
[profile.web-release]
inherits = "release"
strip = true
# codegen-units = 1
lto = "thin"
opt-level = 'z'
panic = "abort"

[profile.release.package.pitchvis_serial]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
#panic = "abort"  # Abort on panic.

[patch.crates-io]
kiss3d = { git = "https://github.com/heinzelotto/kiss3d" }
# FIXME: issue with stylus https://github.com/rust-mobile/android-activity/pull/191#issuecomment-3001694234
android-activity = { git = "https://github.com/damus-io/android-activity", rev = "4ee16f1585e4a75031dc10785163d4b920f95805" }
