[package]
name = "agdk-cpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
android_logger = "0.11.0"
android-activity = { version = "0.4.1", features = ["game-activity"] }
atomic_float = "0.1"
anyhow = "1"
find_peaks = "0.1.5"
pitchvis_analysis = { path = "../pitchvis_analysis" }
itertools = "0.10.5"
serialport = "4.2.0"
oboe = { version = "0.5.0", features = [ "java-interface", "shared-stdcxx" ] }
aaudio = "0.1.0"
dagc = {version = "0.1.0", path = "../dagc_fork" } # TODO: fork and reference fork as patched dependency
jni = "0.21.1"
ndk-context = "0.1.1"

[lib]
name="main"
crate_type=["cdylib"]

[workspace]