[package]
name = "pitchvis_analysis"
version = "0.1.0"
authors = ["Felix Monninger <felix.monninger@gmail.com>"]
edition = "2021"

[lib]
name = "pitchvis_analysis"

[dependencies]
rustfft = "6.1.0"
apodize = "1.0.0"
num-complex = "0.4.2"
sprs = "0.11.0"
find_peaks = "0.1.5"
log = "0.4.17"
lab = "0.11.0"
rust-music-theory = "0.2"
chord_detector = "0.1.0"

[dev-dependencies]
env_logger = "0.11.5"
