[package]
name = "pitchvis_android"
version = "0.1.0"
authors = ["Felix Monninger <felix.monninger@gmail.com>"]
edition = "2021"

[features]
ml = ["dep:tch"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.profile.release]
strip = true
lto = "thin"
opt-level = 'z'

[profile.release]
strip = true
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
name = "pitchvis_android"
crate-type = ["cdylib"]

# [[bin]]
# name = "pitchvis"
# path = "src/main.rs"

[dependencies]
anyhow = "1.0"
itertools = "0.10.5"
log = "0.4.17"
bevy = "0.13.2"
nalgebra = "0.32.2"
pitchvis_analysis = { path = "../pitchvis_analysis" }
pitchvis_audio = { path = "../pitchvis_audio" }

# FIXME: these (re)imports only because of aaudio hack
dagc = {version = "0.1.0", path = "../dagc_fork" } # TODO: fork and reference fork as patched dependency
aaudio = "0.1.0"

#[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.5", features = ["native-activity"] }
jni = "0.21.0"
ndk-context = "0.1.1"
bevy_winit = "0.13.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
tch = { version = "0.13.0", optional = true }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.35", features = [ "AudioContext", 
"AudioContextOptions", "AudioBuffer", "AudioBufferSourceNode", "AudioNode",  "AudioDestinationNode", 
"Window", "AudioContextState", "MediaStreamConstraints", "Navigator", "MediaDevices", "MediaStream", 
"MediaStreamAudioSourceNode", "AudioWorklet", "AudioWorkletNode", "AudioWorkletNodeOptions", "BaseAudioContext",
"MessagePort", "console", "MessageEvent", "MediaStreamTrack", "MediaTrackSettings"] }
js-sys = "0.3.61"
regex = "1"