[package]
name = "pitchvis_audio"
version = "0.1.0"
authors = ["Felix Monninger <felix.monninger@gmail.com>"]
edition = "2021"

[lib]
name = "pitchvis_audio"

[dependencies]
anyhow = "1.0"
itertools = "0.14.0"
log = "0.4.17"
dagc = {version = "0.1.0", path = "../dagc_fork" } # TODO: fork and reference fork as patched dependency

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { version = "0.16.0", features = [] }
env_logger = "0.11.5"

[target.wasm32-unknown-unknown.dependencies]
cpal = { version = "0.16.0", features = ["wasm-bindgen"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.35", features = [ "AudioContext", 
"AudioContextOptions", "AudioBuffer", "AudioBufferSourceNode", "AudioNode",  "AudioDestinationNode", 
"Window", "AudioContextState", "MediaStreamConstraints", "Navigator", "MediaDevices", "MediaStream", 
"MediaStreamAudioSourceNode", "AudioWorklet", "AudioWorkletNode", "AudioWorkletNodeOptions", "BaseAudioContext",
"MessagePort", "console", "MessageEvent", "MediaStreamTrack", "MediaTrackSettings"] }
js-sys = "0.3.61"
regex = "1"
rubato = "0.12" # TODO: update to 0.16, but currently this breaks resampling
