[package]
name = "pitchvis_serial"
version = "0.1.0"
authors = ["Felix Monninger <felix.monninger@gmail.com>"]
edition = "2021"

[[bin]]
name = "pitchvis_serial"
path = "src/main.rs"

[dependencies]
find_peaks = "0.1.5"
pitchvis_analysis = { path = "../pitchvis_analysis" }
pitchvis_audio = { path = "../pitchvis_audio" }
pitchvis_colors = { path = "../pitchvis_colors" }
itertools = "0.13.0"
serialport = "4.2.0"
