[package]
name = "pitchvis_train"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pitchvis_train"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4.17"
env_logger = "0.10.0"
rustysynth = { version = "1.1.0", path = "../rustysynth_fork" }
pitchvis_analysis = { path = "../pitchvis_analysis" }
linfa = "0.6.1"
linfa-logistic = "0.6.1"
ndarray = "0.15.3"
linfa-datasets = { version = "0.6.1", features = ["winequality"] }
rand = "0.8.4"