[package]
name = "pitchvis_viewer"
version = "0.1.0"
authors = ["Felix Monninger <felix.monninger@gmail.com>"]
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.profile.release]
strip = true
lto = "thin"
opt-level = 'z'

[features]
ml = []

[lib]
name = "pitchvis_viewer_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pitchvis"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
itertools = "0.12.1"
log = "0.4.17"
bevy = "0.13.0"
nalgebra = "0.32.2"
pitchvis_analysis = { path = "../pitchvis_analysis" }
pitchvis_audio = { path = "../pitchvis_audio" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
tch = "0.13.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.35", features = [ "AudioContext", 
"AudioContextOptions", "AudioBuffer", "AudioBufferSourceNode", "AudioNode",  "AudioDestinationNode", 
"Window", "AudioContextState", "MediaStreamConstraints", "Navigator", "MediaDevices", "MediaStream", 
"MediaStreamAudioSourceNode", "AudioWorklet", "AudioWorkletNode", "AudioWorkletNodeOptions", "BaseAudioContext",
"MessagePort", "console", "MessageEvent", "MediaStreamTrack", "MediaTrackSettings"] }
js-sys = "0.3.61"
regex = "1"
