[package]
name = "pitchvis_viewer"
version = "0.1.0"
authors = ["Felix Monninger <felix.monninger@gmail.com>"]
edition = "2021"

[features]
ml = ["dep:tch"]

[package.metadata.wasm-pack.profile.web-release]
wasm-opt = ['-Oz']

[lib]
name = "pitchvis_viewer_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pitchvis"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
itertools = "0.14.0"
log = "0.4.17"
bevy = { version = "0.16.1", features = ["tonemapping_luts"] }
nalgebra = "0.34.0"
pitchvis_analysis = { path = "../pitchvis_analysis" }
pitchvis_audio = { path = "../pitchvis_audio" }
pitchvis_colors = { path = "../pitchvis_colors" }
dagc = { version = "0.1.0", path = "../dagc_fork" }            # FIXME: fork and reference fork as patched dependency
bevy-persistent = { version = "0.8.0", features = ["all"] } # TODO: select storage formats
serde = "1.0"

[target.'cfg(all(not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
dirs = "6.0"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.0", features = ["game-activity"] }
jni = "0.21.0"
ndk-context = "0.1.1"
bevy_window = "0.16.1"
oboe = "0.6.1"
nix = { version = "0.30.1", features = ["time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"
tch = { version = "0.16.0", optional = true }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.35", features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioNode",
    "AudioDestinationNode",
    "Window",
    "AudioContextState",
    "MediaStreamConstraints",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "BaseAudioContext",
    "MessagePort",
    "console",
    "MessageEvent",
    "MediaStreamTrack",
    "MediaTrackSettings",
] }
web-time = "1.1.0"
js-sys = "0.3.61"
regex = "1"
