[package]
name = "pitchvis-wasm-kiss3d"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "wasm32")']
[lib]
name = "pitchvis"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
rustfft = "6.1.0"
apodize = "1.0.0"
num-complex = "0.4.2"
kiss3d = { version = "0.35.0" }
sprs = "0.11.0"
find_peaks = "0.1.5"
rubato = "0.12.0"
itertools = "0.10.5"
dagc = "0.1.0"
log = "0.4.17"
pitchvis_analysis = { path = "../pitchvis_analysis" }
pitchvis_audio = { path = "../pitchvis_audio" }

[target.wasm32-unknown-unknown.dependencies]
cpal = { version = "0.15.0", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.35", features = [ "AudioContext", 
"AudioContextOptions", "AudioBuffer", "AudioBufferSourceNode", "AudioNode",  "AudioDestinationNode", 
"Window", "AudioContextState", "MediaStreamConstraints", "Navigator", "MediaDevices", "MediaStream", 
"MediaStreamAudioSourceNode", "AudioWorklet", "AudioWorkletNode", "AudioWorkletNodeOptions", "BaseAudioContext",
"MessagePort", "console", "MessageEvent", "MediaStreamTrack", "MediaTrackSettings"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
regex = "1"
console_log = "0.2.1"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]
